models.py, forms.py, views.py y demas

--- a/Ridershop/app1/templates/crear_cita.html
+++ b/Ridershop/app1/templates/crear_cita.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crea tu Cita - RiderShop</title>
+    <title>Crea tu cita con nosotros</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/taller1.css' %}">
 </head>
 
 <body>
     <div class="container">
-        <h1>RiderShop</h1>
-        <h2>Crear Cita</h2>
+        <h1>Para cuando quieres tu cita</h1>
         <form id="citaForm" method="post">
             {% csrf_token %}
             <div class="form-group">
