--- a/Ridershop/app1/static/css/taller1.css
+++ b/Ridershop/app1/static/css/taller1.css
@@ -2,8 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('/Ridershop/app1/static/imagenes/imagenescita.png');
-    background-color: #f4f4f4;
+    background-color: #1b5957;
     display: flex;
     justify-content: center;
     align-items: center;
